@@ -156,11 +156,7 @@ class BaseObjective(object):
             negative log-posterior
 
         """
-        vals = self.parameters
-        if pvals is not None:
-            vals = pvals
-
-        return -self.logpost(vals)
+        return -self.logpost(pvals)
 
     def varying_parameters(self):
         """
@@ -597,8 +593,8 @@ class Objective(BaseObjective):
         logl += (y - model) ** 2 / var_y
 
         # nans play havoc
-        if np.isnan(logl).any():
-            raise RuntimeError("Objective.logl encountered a NaN")
+        # if np.isnan(logl).any():
+        #     raise RuntimeError("Objective.logl encountered a NaN")
 
         # add on extra 'potential' terms from the model.
         extra_potential = self.model.logp()
